Fix: Jump to the home page in some scenarios.

--- a/css/mdui.css
+++ b/css/mdui.css
@@ -12844,7 +12844,7 @@ body.mdui-loaded .mdui-drawer {
 .mdui-gt-btn-outline {
   border-style: solid;
   border-radius: 4px;
-  border-width: 1.5px;
+  border-width: 1.3px;
   position: relative;
   display: inline-block;
   min-width: 88px;
